--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,7 +26,7 @@ set(LINK_SEARCH_START_STATIC ON)
 set(BUILD_SHARED_LIBS OFF)
 # set(CMAKE_EXE_LINKER_FLAGS "-static")
 
-file(GLOB lessons LIST_DIRECTORIES true "l[1-9]")
+file(GLOB lessons LIST_DIRECTORIES true "l[1]")
 add_subdirectory("socket_wrapper")
 
 foreach(lesson ${lessons})
